TAG: vocload-3-2-0-15
TAG: vocload-3-2-0-14
TAG: vocload-3-2-0-13
DATE: 05/17/2005
STAFF: lec
RELEASE: A
CHANGES:
1) TR 3853, OMIM

TAG: vocload-3-2-0-12
DATE: 05/11/2005
STAFF: lec
RELEASE: A
CHANGES:
1) added J:72245 to GOremoveannot.py

TAG: vocload-3-2-0-11
TAG: vocload-3-2-0-10
DATE: 05/04/2005
STAFF: lec
RELEASE: A
CHANGES:
1) TR 3853, OMIM; don't lowercase the synonyms

TAG: vocload-3-2-0-9
TAG: vocload-3-2-0-8
DATE: 05/02/2005
STAFF: lec
RELEASE: A
CHANGES:
1) TR 3853, OMIM

TAG: vocload-3-2-0-7
DATE: 04/29/2005
STAFF: lec
RELEASE: A
CHANGES:
1) TR 3853, OMIM

TAG: vocload-3-2-0-6
DATE: 04/22/2005
STAFF: lec
RELEASE: A
CHANGES:
1) TR 3853, OMIM

TAG: vocload-3-2-0-5
TAG: vocload-3-2-0-4
DATE: 04/15/2005
STAFF: lec
RELEASE: A
CHANGES:
1) TR 3853, OMIM

TAG: vocload-3-2-0-3
TAG: vocload-3-2-0-2
DATE: 04/14/2005
STAFF: lec
RELEASE: A
CHANGES:
1) TR 3853, OMIM

TAG: vocload-3-2-0-1
DATE: 04/13/2005
STAFF: lec
RELEASE: A
CHANGES:
1) MPR merge

TAG: vocload-mpr-3
DATE: 03/24/2005
STAFF: dbm
RELEASE: A
CHANGES:
1) Added VOC_processAnnotHeaderAll procedure call after header load
2) Cleaned up logging messages

TAG: vocload-mpr-2
DATE: 03/23/2005
STAFF: dbm
RELEASE: A
CHANGES:
1) Added topological sort

TAG: vocload-mpr-1
DATE: 03/17/2005
STAFF: dbm
RELEASE: A
CHANGES:
1) Tag for header, note and synonym fixes plus directory migration

TAG: vocload-mpr-BP
DATE: 03/04/2005
STAFF: dbm
RELEASE: A
CHANGES:
1) Branch point tag for MPR

TAG: vocload-3-1-0-2
DATE: 01/31/2005
STAFF: lec
RELEASE: A
CHANGES:
1) loadTerms.py; merge terms even if merged term is obsolete

TAG: vocload-3-1-0-1
DATE: 12/23/2004
STAFF: lec
RELEASE: A
CHANGES:
1) TR 6441; added smb to MP.config

TAG: vocload-6-0-1
DATE: 06/03/2004
STAFF: lec
RELEASE: A
CHANGES:
1) don't truncate the transaction log

TAG: vocload-6-0-0
DATE: 01/28/2004
STAFF: lec
RELEASE: A
CHANGES:
1) JSAM branch merge

TAG: vocload-5-0-3
TAG: vocload-5-0-2
DATE: 01/28/2004
STAFF: lec
RELEASE: A
CHANGES: