@@ -27,7 +27,8 @@ export RUNTIME_DIR
 export ARCHIVE_DIR
 
 RCD_FILE="MP.rcd"
-MAINTAINER="lec@informatics.jax.org, csmith@informatics.jax.org, smb@informatics.jax.org"
+#MAINTAINER="lec@informatics.jax.org, csmith@informatics.jax.org, smb@informatics.jax.org"
+MAINTAINER="lec@informatics.jax.org"
 
 export RCD_FILE
 export MAINTAINER
@@ -71,6 +72,9 @@ export NOTE_FILE
 export SYNONYM_FILE
 
 # $Log$
+# Revision 1.24  2005/05/11 13:38:40  lec
+# added J:72245
+#
 # Revision 1.23  2005/05/02 13:12:53  lec
 # vocload-3-2-0-8
 #
