@@ -1,3 +1,10 @@
+TAG: vocload-3-2-0-16
+DATE: 05/19/2005
+STAFF: lec
+RELEASE: A
+CHANGES:
+1) TR 6806/DAG_Closure
+
 TAG: vocload-3-2-0-15
 TAG: vocload-3-2-0-14
 TAG: vocload-3-2-0-13
